# book2anki

./: .gitignore  README.md  pyproject.toml
src/: book2anki.py
