[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "book2anki"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "genanki",
    "mecab-python3",
    "unidic-lite",
]

[project.optional-dependencies]
lint = ["ruff"]

[project.scripts]
book2anki = "book2anki:main"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 100
output-format = "concise"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint]
preview = true
select = [
    "W",    # pycodestyle warning
    "I",    # isort
    "N",    # pep8-naming
    "F",    # Pyflakes rules
    "C",    # flake8-complexity
    "PTH",  # Paths
]
